| Summary: | ASTERISK-24245: gcc 4.1.2 complains of files that do not end with newlines | ||
| Reporter: | Shaun Ruffell (sruffell) | Labels: | |
| Date Opened: | 2014-08-18 11:18:03 | Date Closed: | 2014-08-21 09:53:56 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | |
| Versions: | 13.0.0-beta1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) 0002-Trivial-addition-of-newlines-at-end-of-three-files.patch | |
| Description: | See attached patch | ||
| Comments: | By: Shaun Ruffell (sruffell) 2014-08-18 11:19:59.461-0500 [^0002-Trivial-addition-of-newlines-at-end-of-three-files.patch] adds in newlines to allow asterisk 13.0-beta1 to compile on CentOS 5 with gcc 4.1.2. By: Shaun Ruffell (sruffell) 2014-08-19 15:41:55.344-0500 This looks like it affects some releases on 12 branch too. The newline at end of file was added in http://svnview.digium.com/svn/asterisk?view=revision&revision=410795 | ||