Clean up files that do not end with newlines

Trivial patch to add new lines to several files missing them. This fixes
warnings when compiling with gcc 4.1.2 on CentOS 5.

ASTERISK-24245 #close
Reported by: Shaun Ruffell
patches:
  0002-Trivial-addition-of-newlines-at-end-of-three-files.patch uploaded by Shaun Ruffell (License 5417)


git-svn-id: https://origsvn.digium.com/svn/asterisk/branches/12@421677 65c4cc65-6c06-0410-ace0-fbb531ad65f3