main/dns.c
@@ -340,3 +340,4 @@ struct ao2_container *ast_dns_get_nameservers(void)
 
 	return nameservers;
 }
+
