main/format_cache.c
@@ -512,3 +512,4 @@ int ast_format_cache_is_slinear(struct ast_format *format)
 
 	return 0;
 }
+
